# ai_daily

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.codex/: config.toml
agent-docs/: digest-format.md  execplans.md  operations.md  telegram.md  yandex-ai.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260203_162304_init_schema.py  20260208_183500_add_post_summary_category.py
src/aidigest/: __init__.py  cli.py  config.py  logging.py
src/aidigest/bot_commands/: app.py  auth.py  handlers.py
src/aidigest/db/: __init__.py  engine.py  models.py  repo_channels.py  repo_dedup.py  repo_dedup_clusters.py  repo_digest.py  repo_digests.py  repo_embeddings.py  repo_posts.py  repo_stats.py  repo_summaries.py  session.py
src/aidigest/digest/: __init__.py  build.py  format.py
src/aidigest/ingest/: __init__.py  fetch_window.py  normalize.py  window.py
src/aidigest/nlp/: __init__.py  dedup.py  embed.py  prompts.py  summarize.py  yandex_llm.py
src/aidigest/scheduler/: __init__.py  jobs.py  runner.py
src/aidigest/telegram/: bot_client.py  user_client.py
tests/: test_bot_channel_command.py  test_digest_format_signal.py  test_digest_selection.py  test_embed_yandex.py  test_exact_dedup.py  test_format_split.py  test_summarize_category.py  test_window.py
