[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidigest"
version = "0.1.0"
description = "Telegram digest bootstrap"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "pydantic-settings",
  "python-dotenv",
  "rich",
  "loguru",
  "click",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "pgvector",
  "httpx",
  "apscheduler",
  "tenacity",
  "telethon",
  "aiogram",
  "openai",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
aidigest = "aidigest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aidigest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "data",
  "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
